refactor and moved and deleted some files for organization, and as a result of the moving t a wrapper run.py file

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /__pycache__/*
 bots/__pycache__/
 core/__pycache__/
+web_app/routes/__pycache__/
 bots/characters/__pycache__/
 web_app/__pycache__/
 recordings/*
