Seperated concerns between the chat bot and the AI and refactored to allow seperations of concerns for the commands and the executions of said commands,  created and started a state machine for possible disconnect of components on the fly using the flask app

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .idea/
 .venv/
+.venv_py313/
+.venv_py312/
 .env
 .vscode/*
 bots/conversation_histories/Barry Braintree-ConversationHistoryBackup.txt
