--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .venv/
 .venv_py313/
 .venv_py312/
+.venv_312/
 .env
 .vscode/*
 bots/conversation_histories/Barry Braintree-ConversationHistoryBackup.txt
